// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App component renders App 1`] = `
<DocumentFragment>
  <div>
    <h1>
      DISAMBIGUOUS TUNES
    </h1>
    <a
      href="/"
    >
      <button>
        Back to Home
      </button>
    </a>
    <div>
      <form>
        <input
          placeholder="Search..."
          type="text"
          value=""
        />
        <button>
          Search
        </button>
      </form>
    </div>
  </div>
  <div>
    <div>
      <div>
        <button>
          Next
        </button>
        <span
          data-testid="span"
        >
          Page 1
        </span>
      </div>
    </div>
    <div
      data-testid="artists"
    />
    <div>
      <div>
        <button>
          Next
        </button>
        <span
          data-testid="span"
        >
          Page 1
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App component renders ArtistItem 1`] = `
<DocumentFragment>
  <div>
    <h2 />
    <p>
       - 
    </p>
    <p />
  </div>
</DocumentFragment>
`;

exports[`App component renders ArtistList 1`] = `
<DocumentFragment>
  <div
    data-testid="artists"
  >
    <div>
      <a
        href="/artist/Blue/3ce0a4ca-7e5a-44bf-bffe-913cd1461771"
      >
        <div>
          <h2>
            Blue
          </h2>
          <p>
             - 
          </p>
          <p />
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App component renders Header 1`] = `
<DocumentFragment>
  <div>
    <h1>
      DISAMBIGUOUS TUNES
    </h1>
    <a
      href="/"
    >
      <button>
        Back to Home
      </button>
    </a>
    <div>
      <form>
        <input
          placeholder="Search..."
          type="text"
          value=""
        />
        <button>
          Search
        </button>
      </form>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App component renders Lyrics 1`] = `
<DocumentFragment>
  <div>
    <p>
      I had this bitch you see, she made lies to me
Her deceit, oh, it gave me a chill
But I found out now, that baby that baby ice dog
She said, we would wed in Mongolian country
Lilies shoot free, but she was snowing me

In the mountains, oh, her intent was all too clear



It was quite a sin, how the ice caved in

I was numb, I could not assist

Baby ice went down through cold cold cold ground

I said baby, that's the breaks



Leading me around like broke down hound dog

Crossing me once too often

Now she's bound for a lower station

She crossed me once too often

And now the ladies all fear this Mongolian man

With ice down his face you know I could get them involved

In unnatural acts with the aid of my cold cold stare



They'd like to make it with my big black dog

But they just don't know how to ask

You know they'd like to try anything that comes into your mind

Oh freeze on freeze on freeze on bone to bone
    </p>
  </div>
</DocumentFragment>
`;

exports[`App component renders RecordingItem 1`] = `
<DocumentFragment>
  <div>
    <p>
      Another Night Time Flight
    </p>
    <p>
      3:57
    </p>
  </div>
</DocumentFragment>
`;

exports[`App component renders RecordingList 1`] = `
<DocumentFragment>
  <div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Another Night Time Flight"
      >
        <div>
          <p>
            Another Night Time Flight
          </p>
          <p>
            3:57
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Women"
      >
        <div>
          <p>
            Women
          </p>
          <p>
            3:46
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Bring Back the Love"
      >
        <div>
          <p>
            Bring Back the Love
          </p>
          <p>
            4:25
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/I'm Alone"
      >
        <div>
          <p>
            I'm Alone
          </p>
          <p>
            4:03
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Don't Wanna Make You Cry"
      >
        <div>
          <p>
            Don't Wanna Make You Cry
          </p>
          <p>
            2:10
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Fantasy"
      >
        <div>
          <p>
            Fantasy
          </p>
          <p>
            3:30
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/I Understand"
      >
        <div>
          <p>
            I Understand
          </p>
          <p>
            4:22
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Tired of Loving You"
      >
        <div>
          <p>
            Tired of Loving You
          </p>
          <p>
            3:43
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Capture Your Heart"
      >
        <div>
          <p>
            Capture Your Heart
          </p>
          <p>
            3:18
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/The Shepherd"
      >
        <div>
          <p>
            The Shepherd
          </p>
          <p>
            4:40
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/lyrics/Blue Blue Blue/Strange Thing"
      >
        <div>
          <p>
            Strange Thing
          </p>
          <p>
            4:10
          </p>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`App component renders ReleaseItem 1`] = `
<DocumentFragment>
  <div>
    <h2>
      Another Night Time Flight
    </h2>
    <p>
      no cover available
    </p>
    <p>
      2009-06-28
    </p>
  </div>
</DocumentFragment>
`;

exports[`App component renders ReleaseList 1`] = `
<DocumentFragment>
  <div
    data-testid="releases"
  >
    <div>
      <a
        href="/release/Blue Blue Blue/12503eef-7fca-4322-9012-2057995aaba7"
      >
        <div>
          <h2>
            Another Night Time Flight
          </h2>
          <p>
            no cover available
          </p>
          <p>
            2009-06-28
          </p>
        </div>
      </a>
    </div>
    <div>
      <a
        href="/release/Blue Blue Blue/1904a7ad-ca50-44f5-9b59-a6ed6d43c93c"
      >
        <div>
          <h2>
            Cookie In A Jar
          </h2>
          <p>
            no cover available
          </p>
          <p>
            1975
          </p>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
